@@ -7,6 +7,9 @@
 	* DBCVSWriter.m
 	Add logger to CVS reader and writer.
 
+	* DBLogger.[h,m]
+	Log cleaner method.
+
 2012-07-09 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
